# Loom-OS

./: .gitignore  404.html  BENCHMARKS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  run.sh
.github/workflows/: docs.yml
.omc/: project-memory.json
.omc/sessions/: 036a5e40-3ef9-437e-a472-606ce80336bc.json  0c5526d5-e6d5-41a6-9aac-3d657bf1fab5.json  198dbf48-7f66-461a-86fc-8a693a1dcbed.json  1ec8c5bf-08a4-442b-96c5-1c2f249ea0a9.json  339f4184-3ca2-4949-9b29-b8c96990cf63.json  37aeeced-bec1-49d7-a08c-b5452ad2062d.json  66907a88-d523-4fbf-a632-83988fd4405c.json  7347131d-b054-4a05-a62b-55b3af71796a.json  74fe0381-16d4-4b1e-b30f-e0108f34466b.json  7a0d975b-ca6c-4aa5-b01f-64fc0f68dd92.json  7bceb94f-e4bc-4d22-8a2c-8038cb563be9.json  823d8a45-b621-41d4-a581-e140c693f252.json  9fba2fec-cdda-44a7-8ac4-1d5f0ae87514.json  bbef7641-fdb1-4a81-9e36-6f722aa69536.json  c41b3a77-9ba3-478f-a8ad-61624e4aa9ec.json  cd1ae8a1-a2b1-4585-828f-45f73625f322.json  ce23acd8-18bd-48f6-b870-cb5ed8847acb.json  d261f910-848e-4caf-b0e2-4c68dd74bb3c.json  f4086545-8a42-47d0-a4fd-70302d5884d7.json  f5e60402-ba3d-46cb-8c6c-d1b5b0d71b51.json
.omc/state/: agent-replay-37aeeced-bec1-49d7-a08c-b5452ad2062d.jsonl  last-tool-error.json  mission-state.json
benchmarks/: README.md  harness.py  loom.json  report.py
clients/js/: README.md  package-lock.json  package.json  tsconfig.json
concepts/filesystem-protocol/: index.html
concepts/knowledge-graph/: index.html
daemon/: __init__.py  api.py  audit.py  auth.py  embeddings.py  evals.py  extracted_store.py  extractors.py  graph_engine.py  ingest.py  known_agents.py  main.py  mcp_server.py  models.py  patterns.py  plugins.py  project_knowledge.py  recall.py  registry.py  router.py  runners.py  sessions.py  shared_context.py  snapshots.py  supervisor.py  temporal.py  traces.py  watcher.py  worker.py  worktree.py
dashboard/: package-lock.json  package.json  proxy.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: activity-feed.tsx  add-project-modal.tsx  agent-badge.tsx  agent-card.tsx  agent-directory.tsx  agent-wiring.tsx  audit-log.tsx  debug-overlay.tsx  dispatch-history.tsx  dispatch-modal.tsx  eval-dashboard.tsx  graph-canvas-reagraph.tsx  graph-canvas.tsx  graph-controls.tsx  graph-stats.tsx  knowledge-sources.tsx  memory-bank.tsx  new-task-modal.tsx  node-detail.tsx  pattern-explorer.tsx  (+8 more)
docs/: AGENT-LIFECYCLE.md  API.md  ARCHITECTURE.md  DASHBOARD.md  DEVELOPMENT.md  FILESYSTEM-PROTOCOL.md  TASK-BOARD.md
docs-site/: index.md  quickstart.md
integrations/langchain-loom/: README.md  pyproject.toml
integrations/langchain-loom/examples/: basic_usage.py
integrations/langchain-loom/langchain_loom/: __init__.py  memory.py
integrations/langchain-loom/tests/: test_memory.py
loom-client/: README.md  pyproject.toml
loom-client/examples/: python_example.py  shell_example.sh
loom-client/loom_client/: __init__.py  client.py  models.py
loom-client/tests/: test_client.py  test_models.py  test_roundtrip.py
quickstart/: index.html
scripts/: smoke-test.sh
search/: search_index.json
tests/: test_api.py  test_audit.py  test_auth.py  test_benchmarks.py  test_cli.py  test_embeddings.py  test_evals.py  test_extracted_store.py  test_extractors.py  test_graph_engine.py  test_ingest.py  test_mcp.py  test_patterns.py  test_plugins.py  test_recall.py  test_registry.py  test_router.py  test_runners.py  test_sessions.py  test_shared_context.py  test_snapshots.py  test_supervisor.py  test_tasks.py  test_temporal.py  test_traces.py  test_watcher.py  test_worker.py  test_worktree.py
(+75 files in other folders)
