[project]
name = "loom"
version = "0.1.0"
description = "Loom — unified agent memory fabric"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "watchdog>=5.0.0",
    "graphifyy>=0.8.0",
    "pydantic>=2.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[project.scripts]
loom = "daemon.main:main"
loom-mcp = "daemon.mcp_server:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["daemon*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
