[project]
name = "loom-os"
version = "0.2.0"
description = "Loom OS — unified agent memory fabric for multi-agent coding"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai-agents", "knowledge-graph", "agent-memory", "mcp", "code-graph"]
authors = [{ name = "Mohamed Hussien" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "watchdog>=5.0.0",
    "graphifyy>=0.8.0",
    "pydantic>=2.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/mohamedhusseinios/Loom-OS"
Repository = "https://github.com/mohamedhusseinios/Loom-OS"
Issues = "https://github.com/mohamedhusseinios/Loom-OS/issues"

[project.optional-dependencies]
llm = ["openai>=1.0", "anthropic>=0.39", "httpx>=0.27"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[project.scripts]
loom = "daemon.main:main"
loom-mcp = "daemon.mcp_server:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["daemon*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
